so many changes... working on project page, added more photos, updated footer

--- a/_footer.html
+++ b/_footer.html
@@ -1,7 +1,10 @@
-<div class="footer-nav">
-  <a href="index.html" class="nav-button">Home</a>
-  <a href="about.html" class="nav-button">Rebecca</a>
-  <a href="projects.html" class="nav-button">Projects</a>
-  <a href="fieldphotos.html" class="nav-button">Photos</a>
-  <a href="resume.html" class="nav-button">Résumé</a>
-  <a href="cv.html" class="nav-button">CV</a>
+<footer class="fixed-footer">
+  <div class="footer-nav">
+    <a href="index.html" class="nav-button">Home</a>
+    <a href="about.html" class="nav-button">Rebecca</a>
+    <a href="projects.html" class="nav-button">Projects</a>
+    <a href="fieldphotos.html" class="nav-button">Photos</a>
+    <a href="resume.html" class="nav-button">Resume</a>
+    <a href="cv.html" class="nav-button">CV</a>
+  </div>
+</footer>
