--- a/_footer.html
+++ b/_footer.html
@@ -1,10 +1,11 @@
 <footer class="fixed-footer">
   <div class="footer-nav">
     <a href="index.html" class="nav-button">Home</a>
-    <a href="about.html" class="nav-button">Rebecca</a>
+    <a href="about.html" class="nav-button">Meet Rebecca</a>
     <a href="projects.html" class="nav-button">Projects</a>
     <a href="fieldphotos.html" class="nav-button">Photos</a>
     <a href="resume.html" class="nav-button">Resume</a>
     <a href="cv.html" class="nav-button">CV</a>
+      <a href="cats.html" class="nav-button" title="Meet Chester and Leo 🐾">🐾 </a>
   </div>
 </footer>
