--- a/_footer.html
+++ b/_footer.html
@@ -5,6 +5,7 @@
     <a href="projects.html" class="nav-button">Projects</a>
     <a href="fieldphotos.html" class="nav-button">Photos</a>
     <a href="experience.html" class="nav-button">Experience</a>
+    <a href="resources.html" class="nav-button">Resources</a>
     <a href="cats.html" class="nav-button" title="Meet Chester and Leo 🐾">🐾 </a>
   </div>
 </footer>
